Omnibox UI Refresh: Prevent restoring incorrect edit model focus state

The tab management system saves and restores the last-focused control
for each tab.

However, if the last-focused control is destroyed, the browser focuses
the Omnibox by default. In those cases, the edit model's saved focus
state will be incorrect.

This CL prevents that weird state from occurring by cross-checking the
edit model's saved focus state with the actual focus state restored by
the tab management system.

This state de-syncing was always there, but has been recently made
visibly apparent because of:
https://chromium-review.googlesource.com/c/chromium/src/+/1144211

Bug: 866781
Change-Id: I0e85be9f650ae896021096e6c546b9f085d528d6
Reviewed-on: https://chromium-review.googlesource.com/1149191
Commit-Queue: Tommy Li <tommycli@chromium.org>
Reviewed-by: Justin Donnelly <jdonnelly@chromium.org>
Cr-Commit-Position: refs/heads/master@{#578131}
Former-commit-id: 19422be2e791e3a33e9e6b8644499f3f4273dc71