components/omnibox/browser/omnibox_edit_model_unittest.cc
@@ -244,3 +244,20 @@ TEST_F(OmniboxEditModelTest, DisablePasteAndGoForLongTexts) {
       std::string(OmniboxEditModel::kMaxPasteAndGoTextLength + 1, '.'));
   EXPECT_FALSE(model()->OmniboxEditModel::CanPasteAndGo(long_text));
 }
+
+// The tab-switching system sometimes focuses the Omnibox even if it was not
+// previously focused. In those cases, ignore the saved focus state.
+TEST_F(OmniboxEditModelTest, IgnoreInvalidSavedFocusStates) {
+  // The Omnibox starts out unfocused. Save that state.
+  ASSERT_FALSE(model()->has_focus());
+  OmniboxEditModel::State state = model()->GetStateForTabSwitch();
+  ASSERT_EQ(OMNIBOX_FOCUS_NONE, state.focus_state);
+
+  // Simulate the tab-switching system focusing the Omnibox.
+  model()->OnSetFocus(false);
+
+  // Restoring the old saved state should not clobber the model's focus state.
+  model()->RestoreState(&state);
+  EXPECT_TRUE(model()->has_focus());
+  EXPECT_TRUE(model()->is_caret_visible());
+}
